
syntax = "proto3";
package xxx;
option go_package = "github.com/xxx";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/struct.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/any.proto";

enum AEnum {
    VALUE_0 = 0;
    VALUE_1 = 1;
}

message WellknownTypes {
  google.protobuf.Timestamp timestamp = 1;
  google.protobuf.Duration duration = 2;
  AEnum enum_value = 3;
  map<string, string>  map_value = 4;
  google.protobuf.Struct struct = 5;
  google.protobuf.ListValue list_value = 6;
  google.protobuf.NullValue null_value = 7;
  google.protobuf.FieldMask field_mask = 8;
  google.protobuf.Any any = 9;
  google.protobuf.Empty empty = 10;
}